@@ -2,8 +2,9 @@
 # IntelliJ IDEA VM options #
 ############################
 
-# DEFAULT
-# ( Original )
+############################
+# Version Original Default #
+############################
 
 #-Xms128m
 #-Xmx750m
@@ -30,11 +31,35 @@
 #-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
 #-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
 
-# CURRENT
-# ( 2018-09-13 )
+######################
+# Version 2018-09-13 #
+######################
 
--Xms3g
--Xmx6g
--XX:ReservedCodeCacheSize=1g
+#-Xms3g
+#-Xmx6g
+#-XX:ReservedCodeCacheSize=1g
+#-XX:+UseCompressedOops
+
+######################
+# Version 2020-11-17 #
+######################
+-XX:+UseG1GC
+-Xms1024m
+-Xmx1536m
+-XX:ReservedCodeCacheSize=240m
 -XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-XX:CICompilerCount=2
+-Dsun.io.useCanonPrefixCache=false
+-Djava.net.preferIPv4Stack=true
+-Djdk.http.auth.tunneling.disabledSchemes=""
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-Djdk.attach.allowAttachSelf
+-Dkotlinx.coroutines.debug=off
 
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-Xlog:gc
